fix page 1 length